--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "PA1_template.Rmd"
 author: "Karen"
-output: html_document
+output:
+  html_document:
+    keep_md: yes
 ---
 Assignment 1 - Reproducible Research 
 
